# SingleSignOn-CRM

./: .gitignore  CMakeLists.txt  COMHttpServer.sln  COMHttpServer.vcxproj  COMHttpServer.vcxproj.filters  CRM_Dashboard.cpp  CRM_Dashboard.h  HttpServer.cpp  HttpServer.hpp  IHttpServer.hpp  Login_Page.pro  QT Project - Shortcut.lnk  README.md  Readme.md  customer_search.cpp  customer_search.h  customoauthhandler.cpp  customoauthhandler.h  index.html  login.cpp  login.h  main.cpp  oauthlogin.cpp  oauthlogin.h  order.cpp  order.h  ordermanager.cpp  ordermanager.h  orderwidget.cpp  orderwidget.h  search_customer.cpp  search_customer.h  servercontrol.cpp  servercontrol.h  servercontrolwidget.cpp  servercontrolwidget.h
